# nautilos-osse

./: 0_no_da.ipynb  0a_plan.ipynb  0b_find_files.ipynb  0c_160_to_800.ipynb  0d_4_stations.ipynb  0e_find_bloom.ipynb  0f_check_models.ipynb  1_check_models.ipynb  1_make_4st_obs.ipynb  1_make_da_obs_april2018.ipynb  1_merge_obs.ipynb  2_4stations_da.ipynb  2_check_diffs_prenaut.ipynb  2_check_inits.ipynb  2_check_rmsd.ipynb  README.md  arguments.py  make_init.py  pyproject.toml  regridding.py  run_sequence.py
nautilos_osse/: arguments.py  extract_variable.py  regridding.py
notebooks/: 0a_plan.ipynb  0b_find_files.ipynb  0c_160_to_800.ipynb  0c_160grid_rm_lakes.ipynb  0c_160out_rm_lakes.ipynb  0d_4_stations.ipynb  0f_check_models.ipynb  1_make_4st_obs.ipynb  1_make_min_obs.ipynb  1_merge_obs.ipynb  2_check_diffs_prenaut.ipynb  2_check_inits.ipynb  2_check_postnaut.ipynb  2_check_rmsd.ipynb  2_check_rmsd_roho800.ipynb
