[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nautilos-osse"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "xarray[complete]",
    "matplotlib",
    "ipykernel",
]

[tool.pyright]
typeCheckingMode = "off"

[tool.pylint.messages_control]
max-line-length = 121
disable = [
  "missing-docstring",
  "unused-argument",
  "protected-access",
  "too-few-public-methods",
  "too-many-locals",
  "too-many-instance-attributes",
  "invalid-name",
]

[tool.pylint.design]
# limiting the number of returns might discourage
# the use of guard clauses. So we increase the
# allowed number of returns from 6 to 8
max-returns = 8

[tool.setuptools.packages.find]
include = ["nautilos_osse"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
  # zip-without-explicit-strict
  "B905"
]

# Ignore `E402` (import violations) in all `__init__.py` files, and in select subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
